# Biome

./: .gitattributes  .gitignore  .prettierrc  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: ci.yml  release.yml
seeds/: .gitignore
src/: App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/server-components/: pyproject.toml  server.py
src-tauri/src/: lib.rs  main.rs
src/components/: BottomPanel.jsx  EngineModeChoice.jsx  HudBackground.jsx  HudOverlay.jsx  HudVideoFrame.jsx  PauseOverlay.jsx  PortalBackgrounds.jsx  ServerLogDisplay.jsx  SettingsPanel.jsx  ShutdownOverlay.jsx  StatsDisplay.jsx  TerminalDisplay.jsx  Titlebar.jsx  VideoContainer.jsx  VideoMask.jsx  WindowAnchors.jsx
src/context/: PortalContext.jsx  StreamingContext.jsx  StreamingContextShared.jsx
src/css/: holo-frame.css  logo-animation.css  styles.css  video-mask.css
src/hooks/: useConfig.js  useEngine.js  useGameInput.js  useTauri.js  useWebSocket.js
src/utils/: logger.js  promptSanitizer.js
