[project]
name = "biome-server"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = [
  "world-engine @ git+https://github.com/Wayfarer-Labs/world_engine.git@websocket",
  "pillow",
  "fastapi>=0.128.0",
  "uvicorn>=0.40.0",
  "websockets>=15.0.1",
]

# temp fix since uv keeps trying to resolve linux triton dependency on windows
[dependency-groups]
dev = []

[tool.uv]
environments = ["sys_platform == 'win32'"]