[project]
name = "biome-server"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = [
  "world-engine @ git+https://github.com/Wayfarer-Labs/world_engine.git@websocket",
  "pillow",
  "fastapi>=0.128.0",
  "uvicorn>=0.40.0",
  "websockets>=15.0.1",
  "hf-xet>=1.0.0",
]

[dependency-groups]
dev = []

[tool.uv]
index-strategy = "unsafe-best-match"

[tool.uv.sources]
triton = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/test/cu128"